footer link edit

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <hr>
 <footer class="footer bg-light py-3">
     <div class="container">
-        <p class="text-center">&copy Markus Hamacher 2020 | <a class="text-secondary" href="impressum.html">Impressum</a></p>
+        <p class="text-center">&copy Markus Hamacher 2020 | <a class="text-secondary" href="../impressum.html">Impressum</a></p>
     </div>
 </footer>
 <!--    JS stuff-->
