--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h3 class="text-center font-weight-bold" id="info">Information's</h3>
                 <p class="text-center pt-3">
                     This project started around the beginning of the year. <br>
-                    First I began to write the code in assembly but after a while I switched to C because C is easily to understand in contrast to assembly. <br>
+                    First I began to write the code in assembly but after a while I switched to C because C is easier to understand in contrast to assembly. <br>
                     So first of all I created the main parts like text output for debugging, GDT/IDT and IRQs. <br>
                     After a few lines of codes or evan more I created a KeyboardController so I can write with the keyboard. <br>
                     Then I programmed multitasking so the tasks can run side by side. <br>
