my english is bad

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
+                        <a class="nav-link" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item dropright">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -96,7 +96,7 @@
                     This project started around the beginning of the year. <br>
                     First I began to write the code in assembly but after a while I switched to C because C is easily to understand in contrast to assembly. <br>
                     So first of all I created the main parts like text output for debugging, GDT/IDT and IRQs. <br>
-                    After a few lines of codes or evan more I created a KeyboardController so I can write with the keyboard. <br>
+                    After a few lines of codes or even more I created a KeyboardController so I can write with the keyboard. <br>
                     Then I programmed multitasking so the tasks can run side by side. <br>
                     Because the tasks access the same memory I have to include paging. <br>
                     The kernel can also load external program's as a task.
